--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "test.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon test.js" 
   },
   "author": "",
   "license": "ISC",
@@ -13,7 +13,9 @@
     "chalk": "^4.1.0",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
-    "nodemon": "^2.0.6",
     "uuid": "^8.3.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.6"
   }
 }
